# Space-traffic

./: CMakeLists.txt  Deflector.h  DeflectorConstants.h  Difficulties.h  Engine.h  EngineConstants.h  GetDamage.cpp  README.md  Ship.h  ShipConstants.h
Src/: Conditions.h  Damage.h  Deflector.h  DeflectorConstants.h  Difficulties.h  Engine.h  EngineConstants.h  IsType.h  IsTypeChecker.h  Market.h  README.md  Result.h  Ship.h  ShipConstants.h  Test.cpp  Test.h  main.cpp
